--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,15 @@ body {
 }
 
 .col {
-  border: 1px solid black;
-   flex: 1;
-   background: #777;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-around;
-   align-items: center;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .col h2 {
+  font-weight: normal;
   padding: 10px;
   color: #fff;
   border-radius: 10px;
